--- a/index.html
+++ b/index.html
@@ -4,37 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Kalam&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
    <header>
-    <a href="./index.html">
-        <img src="./images/Vector.svg" alt="logo" width="66">
-    </a>
-    <nav>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Service</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-    </nav>
-    <button type="button">
+    <div class="container header-container">
+<a class="logo" href="./index.html">
+    <img src="./images/Vector.svg" alt="logo" width="66">
+</a>
+<nav>
+    <ul class="nav-list">
+        <li><a class="nav-link" href="">Home</a></li>
+        <li><a class="nav-link" href="">About</a></li>
+        <li><a class="nav-link" href="">Service</a></li>
+        <li><a class="nav-link" href="">Menu</a></li>
+        <li><a class="nav-link" href="">Contact</a></li>
+    </ul>
+</nav>
+<button type="button" class="button">
     Order Now
-    </button>
+</button>
+    </div>
+    
    </header> 
    <main>
-    <section>
-        <h1>
+    <section class="hero">
+        <div class="container hero-container">
+            <div class="text-wrap">
+        <h1 class="hero-title">
             Enjoy Your Favorite Food From Anywhere
         </h1>
-        <p>
+        <p class="hero-text">
             With just a few clicks, you can have your favorite meals delivered straight to your doorstep, no matter where you are.
             Order now and enjoy a hassle-free and delicious meal from the comfort of your own home.
         </p>
-        <button type="button">Order Now</button>
+        <button class="button" type="button">Order Now</button>
+        </div>
         <img src="./images/hero.png" alt="food" width="528"></section>
-
+    </div>
         <section>
             <img src="./images/aple.png" alt="aple" width="396">
             <h2>What’s Special About Our Offerings</h2>
